--- a/style.css
+++ b/style.css
@@ -36,15 +36,15 @@ h3 {
   margin-bottom: 25px;
 }
 
-/* Poem Text */
+
 p {
-  color: #5a3e2b; /* deep brown text */
+  color: #5a3e2b; 
   text-align: center;
   line-height: 1.8;
   font-size: 18px;
 }
 
-/* Add Hover Effect on the Container */
+
 .poem-container:hover {
   background-color: #fff4cc;
   border-color: #d2a679;
