--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ h1, h2, h3 {
   font-family: "Georgia", serif;
 }
 
-/* .content {
+/*content {
   color: white;
   background-color: cornflowerblue;
 } */
