--- a/style5.css
+++ b/style5.css
@@ -1,57 +1,119 @@
-h1 {
-    text-align: center;
-    display: block;
-    margin: 0 auto 20px auto;
-    font-family: Arial, sans-serif;
-    background-color: rgba(228, 152, 190, 0.904);
-    color: rgb(73, 29, 73);
-    border-radius: 20px;
-    border: 3px solid rgb(99, 5, 44);
-    width :40%;
-
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
 }
 
-button {
-    display: block;
-
-    padding-left: 1em; 
-    padding-right: 1em;
-
-    font-size: 40px;
-    border: 2px solid rgb(68, 33, 196);
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: rgba(223, 217, 217, 0.829);
-
-
+.title {
+  text-align: center;
+  border-bottom: 2px solid black;
+  padding-bottom: 10px;
 }
 
+.profile-card {
+  width: 200px;
+  height: 100px;
+  background-color: #da6c6c;
+  border: 2px solid rgb(66, 2, 2);
+  border-radius: 10px;
+  padding: auto;
+  margin:  auto;
+  text-align: center;
+}
+.role {
+  font-size: 20px;
+  color: #faf6f6;
+}
 
-div {
-    background-color: rgb(56, 117, 56);
-    height: 200px;
-    width: 200px;
-    display: block;
-    border: 5px solid black;
-    margin: 20px;
-    display: inline;
+h2 {
+  color: #252323;
+  font-size: 20x;
 }
 
 
-#first {
-    display :block;
-    background-color: rgb(112, 184, 112);
-    border: 5px solid black;
-    font-size: 30px;
+
+.btn {
+  background-color: #007bff;
+  color: rgb(245, 245, 247);
+  border: 10px solid #edf1f3;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 50px;
+
+}
+  .btn:hover {
+    background-color: #0056b3;
+    transition: background-color 0.7s;
+  }
+
+
+
+.skills li {
+  display: inline-block;
+  width: 80px;
+  height: 30px;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #0e5317;
+  border-radius: 20px;
+  background-color: #a9f3ad;
+  text-align: center;
+  vertical-align: top;
 }
 
-#second { 
-    display: block;
-    background-color: rgb(76, 131, 76);
-    border: 5px solid black;
+
+h3 {
+  margin-bottom: 10px;
 }
-#third {
-    display:block;
-    background-color: rgb(37, 70, 39);
-    border: 5px solid black;
+
+
+.project {
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  background-color: lightblue;
+  border: 2px solid rgb(103, 103, 121);
+  border-radius: 20px;
+  text-align: center;
+  line-height: 80px;
+  padding-bottom: 20px;
+  padding-top: auto;
+  margin: 10px;
+  font-size: 20px;
+  font-weight: 5px;
 }
+
+
+
+.section h3 {
+  display: inline-block;
+  width: 100px;
+  vertical-align: top;
+}
+
+.social-links {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.social-links a {
+  display: inline-block;
+  margin: 0 10px;
+  padding: 10px 15px;
+  background-color: #504d4d;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.social-links a:hover {
+  background-color: #0d0d0e;
+}
+
+
+
+/*.box {
+  background-color: #F5F5DC;
+}*/
